# screenclip

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  screenclip.cpp  screenclip.h
